<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Catatan Keuangan</string>
    <string name="app_version" translatable="false">App Version : 1.0 (BETA)</string>
    <string name="app_disconnect" translatable="false">Connection is unavailable. Please check your internet connection.</string>

    <!-- Login -->
    <string name="hello" translatable="false">Halo, </string>
    <string name="login" translatable="false">Silahkan Masuk</string>
    <string name="login_1" translatable="false">Login</string>
    <string name="login_1_1" translatable="false">Sign In</string>
    <string name="login_2" translatable="false">Selamat datang,\nLogin untuk melanjutkan</string>
    <string name="no_handphone" translatable="false">Nomor Ponsel</string>
    <string name="password" translatable="false">Password</string>
    <string name="lupa_password" translatable="false">Lupa Password?</string>
    <string name="dont_have_account" translatable="false">Don\'t have an account?</string>
    <string name="create_account" translatable="false">Create Account</string>
    <string name="data_aman" translatable="false">100% data anda aman</string>
    <string name="login_txtHP" translatable="false">Nomor Handphone harus diisi</string>
    <string name="login_txtPwd" translatable="false">Password harus diisi minimum 8 Digit</string>
    <!-- Login -->

    <!-- Register -->
    <string name="register" translatable="false">Register</string>
    <string name="register_user_available" translatable="false">User Available</string>
    <string name="register_user_notavailable" translatable="false">User not Available</string>
    <string name="register_1" translatable="false">Selamat datang di CTrlSoft, Untuk masuk silahkan isi formulir dibawah.</string>
    <string name="register_name" translatable="false">Nama</string>
    <string name="register_agree" translatable="false">I agree with our</string>
    <string name="register_term" translatable="false">Term</string>
    <string name="and" translatable="false">and</string>
    <string name="conditions" translatable="false">Conditions</string>
    <string name="register_already_have_account" translatable="false">Already have an Account?</string>
    <!-- Register -->

</resources>