<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/dp16"
        android:paddingHorizontal="@dimen/dp16"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="38dp"
            android:src="@drawable/logo_white"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_1"
            android:layout_marginTop="@dimen/dp24"
            android:textAppearance="@style/TextAppearance.YH.Headline4"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"/>

        <TextView
            android:id="@+id/wellcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_2"
            android:layout_marginTop="@dimen/dp16"
            android:textAppearance="@style/TextAppearance.YH.Body1"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/judul"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv62"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:inputType="none"
            android:enabled="false"
            android:maxLines="1"
            android:maxLength="14"
            android:drawableStart="@drawable/ic_indonesian_flag"
            android:drawablePadding="@dimen/dp8"
            android:hint="+62"
            android:text="+62"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wellcome"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtHandphone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="@dimen/dp8"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="14"
            android:hint="@string/no_handphone"
            app:layout_constraintStart_toEndOf="@+id/tv62"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wellcome"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:maxLength="15"
            android:hint="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHandphone"/>

        <TextView
            android:id="@+id/tvLupaPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password"
            android:textColor="?attr/colorPrimary"
            android:textColorHighlight="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtPassword"
            app:layout_constraintBottom_toBottomOf="@+id/txtPassword"
            android:clickable="true"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp48"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:layout_marginStart="@dimen/dp8"
                android:textColor="?attr/colorPrimary"
                android:clickable="true"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:text="@string/login_1_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv1"/>

        <TextView
            android:id="@+id/tvDataAman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:text="@string/data_aman"
            android:drawablePadding="@dimen/dp8"
            android:clickable="true"
            app:drawableStartCompat="@drawable/ic_lock"
            app:drawableTint="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>