<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dp16"
            android:paddingHorizontal="@dimen/dp16">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="@dimen/dp16"
                android:src="@drawable/logo_white"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:layout_marginTop="@dimen/dp24"
                android:textAppearance="@style/TextAppearance.YH.Headline4"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"/>

            <TextView
                android:id="@+id/wellcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_1"
                android:layout_marginTop="@dimen/dp16"
                android:textAppearance="@style/TextAppearance.YH.Body1"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/judul"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/register_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wellcome"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv62"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:enabled="false"
                android:maxLines="1"
                android:maxLength="14"
                android:drawableStart="@drawable/ic_indonesian_flag"
                android:drawablePadding="@dimen/dp8"
                android:hint="+62"
                android:text="+62"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtName"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtHandphone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8"
                android:inputType="phone"
                android:maxLines="1"
                android:maxLength="14"
                android:hint="@string/no_handphone"
                app:layout_constraintStart_toEndOf="@+id/tv62"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtName"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:maxLength="15"
                android:hint="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtHandphone"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lytAgree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPassword">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/ckAgree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:hint="@string/register_agree"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtPassword"/>

                <TextView
                    android:id="@+id/tvTerm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textColor="?attr/colorPrimaryDark"
                    android:text="@string/register_term"
                    android:paddingHorizontal="@dimen/dp8"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/and"/>

                <TextView
                    android:id="@+id/tvConditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:textColor="?attr/colorPrimaryDark"
                    android:text="@string/conditions"
                    android:paddingHorizontal="@dimen/dp8"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp16"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/btnRegister"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_already_have_account"/>

                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_1_1"
                    android:layout_marginStart="@dimen/dp8"
                    android:textColor="?attr/colorPrimary"
                    android:clickable="true"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:text="@string/create_account"
                app:layout_constraintTop_toBottomOf="@id/tvDataAman"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv1"/>

            <TextView
                android:id="@+id/tvDataAman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp8"
                android:text="@string/data_aman"
                android:drawablePadding="@dimen/dp8"
                android:clickable="true"
                android:layout_marginTop="@dimen/dp16"
                app:drawableStartCompat="@drawable/ic_lock"
                app:drawableTint="?attr/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/lytAgree"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btnRegister" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>